# riff-dag-tui

./: CONSOLIDATION_ANALYSIS.md  CONSOLIDATION_FINAL_SUMMARY.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_QUICK_START.md  CONSOLIDATION_SUMMARY.txt  Cargo.toml  FEDERATION_INTEGRATION.md  PURPOSE_DISCOVERY_REPORT.md  README.md  README_CONSOLIDATION_DOCS.md  REVISED_CONSOLIDATION_STRATEGY.md  UNIFIED_ENTRY_POINT.md
_reference/: clawd-mgr  py-riff-cli
assets/: sample.jsonl
src/: main.rs
