[package]
name = "riff-dag-tui"
version = "0.1.0"
edition = "2021"
description = "Lightweight JSONL DAG viewer - the free gateway to NabiOS ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NabiaTech/nabia.git"

[lib]
name = "riff_dag_tui"
path = "src/main.rs"

[[bin]]
name = "riff-dag-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
